--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "KodaDot_NFT",
-  "name": "KodaDot - Polkadot / Kusama NFT explorer",
+  "short_name": "Bio-Compendium",
+  "name": "SNI - Bio-Compendium",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
